--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -11,3 +11,26 @@
     height: 100%;
     object-fit: cover;
 }
+
+.movie-info-container 
+{
+    width: 350px;
+    max-width: 100%;
+    min-height: 400px;
+    position: relative;
+    top: 21%;
+    left: 12%;
+}
+
+.movie-info-container .movie-title 
+{
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.carousel-container
+{
+  width: 100%;
+  min-height: 500px;
+  background-color: black;
+}
