--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+
+@font-face {
+  font-family: "MediFont";
+  src: url(fonts/MediFont/MadimiOne-Regular.ttf);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
