--- a/src/styles/headerInfo.css
+++ b/src/styles/headerInfo.css
@@ -2,9 +2,9 @@
 {
     max-width: 400px;
     height: 400px;
-    padding: 15px;
     position: relative;
-    left: 60px;
+    color: white;
+    top: 30px;
 }
 
 .information
@@ -18,6 +18,7 @@
 {
     display: flex;
     gap: 30px;
+    margin-top: 13px;
 }
 .information .innerBox #vote {color: orange;}
 .information .innerBox #imdb
