--- a/src/styles/headerCarousel.css
+++ b/src/styles/headerCarousel.css
@@ -3,7 +3,8 @@
     margin: 0 auto;
     width: 97%;
     height: 350px;
-    position: relative;
+    position: fixed;
+    bottom: 20px;
   }
   
  
