--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,27 +1,29 @@
-:root {--bgTop: #907693}
-:root {--bgbottom: "#9e3342"}
+:root {
+  --bgTop: #907693;
+}
+:root {
+  --bgbottom: "#9e3342";
+}
 
 .header {
-    width: 100%;
-    height: 100vh;
-    background-color: black;
-    overflow: hidden;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
 }
-.header__container
-{
-    width: 1500px;
-    max-width: 100%;
-    height: 80vh;
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+.header__container {
+  width: 1500px;
+  max-width: 100%;
+  height: 80vh;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .innerOneContainer {
-    transition: filter 0.3s ease; 
+  transition: filter 0.3s ease;
 }
 
 .innerOneContainer.blurred {
-    filter: blur(20px); 
+  filter: blur(20px);
 }
